// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with color primary and variant link 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-dlfnbm bxASgN hOLtfl"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`Renders with color primary and variant outlined 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-gsTCUz bxASgN fDxJhX"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color danger 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ iTyPRZ"
    color="danger"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color default 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ dGswKV"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color primary 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ bxASgN"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant default 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ dGswKV"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant link 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-dlfnbm dGswKV ekDUII"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant outlined 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-gsTCUz dGswKV MjndT"
    color="default"
    type="button"
  />
</DocumentFragment>
`;
